--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "modi"]
+	path = modi
+	url = https://github.com/martinster/modi
+	shallow = true
+	registered = true
